change icone.png to .ico

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="agence webdesign Lyon">
     <meta name="description" content="La chouette agence entreprise de webdesign à Lyon. Agence de webdesign pour une meilleure visibilité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico">
     
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
@@ -28,7 +28,7 @@
 	<meta property="og:title" content="La chouette agence, entreprise de webdesign à Lyon" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://annesoflouret.github.io/projet-4/index.html" />
-	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-rs.png" />
+	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-rs.ico" />
 	<meta property="og:description"
 		content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
 	<meta property="og:site_name" content="La chouette agence" />
@@ -39,7 +39,7 @@
 	<meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="La chouette agence, entreprise de webdesign à Lyon" />
     <meta name="twitter:description" content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
-    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo-rs.png" />
+    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo-rs.ico" />
     <meta name="twitter:url" content="https://annesoflouret.github.io/projet-4" />
 
     
