--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="agence webdesign Lyon">
     <meta name="description" content="La chouette agence entreprise de webdesign à Lyon. Agence de webdesign pour une meilleure visibilité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico">
     
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,7 +31,7 @@
 	<meta property="og:title" content="La chouette agence, entreprise de webdesign à Lyon" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://annesoflouret.github.io/projet-4/index.html" />
-	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-rs.png" />
+	<meta property="og:image" content="https://annesoflouret.github.io/projet-4/img/logo-rs.ico" />
 	<meta property="og:description"
 		content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
 	<meta property="og:site_name" content="La chouette agence" />
@@ -42,7 +42,7 @@
 	<meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="La chouette agence, entreprise de webdesign à Lyon" />
     <meta name="twitter:description" content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
-    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo-rs.png" />
+    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo-rs.ico" />
     <meta name="twitter:url" content="https://annesoflouret.github.io/projet-4" />
 
     
@@ -87,7 +87,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<section class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, image de chouette" />
+							<img src="img/logo.ico" class="center-block image-resize-mode" width="100" alt="La chouette agence, image de chouette" />
 							<h1 class="text-center hero-bloc-text tc-white ">
 								La chouette agence.
 							</h1>
