change meta description, remove hr from partners footer and change fontsize partners footer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="La chouette agence, entreprise de webdesign à Lyon" />
     <meta name="twitter:description" content="La chouette agence est une entreprise de Web design, basée à Lyon, qui aide les clients à gagner en visibilité sur internet." />
-    <meta name="twitter:image" conten="https://annesoflouret.github.io/projet-4/img/logo-rs.ico" />
+    <meta name="twitter:image" content="https://annesoflouret.github.io/projet-4/img/logo-rs.ico" />
     <meta name="twitter:url" content="https://annesoflouret.github.io/projet-4" />
 
     
@@ -189,7 +189,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<figure class="col-sm-6">
-							<a href="#" aria-label="agrandir l'image 1" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg"class="img-responsive portfolio-thumb" alt="Pages de journaux pour la refonte d'un journal local" /></a>
+							<a href="#" aria-label="agrandir l'image 1" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" class="img-responsive portfolio-thumb" alt="Pages de journaux pour la refonte d'un journal local" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -280,7 +280,7 @@
 						<div class="row white text-center" id="footer-partners">
 							<div class="col-sm-offset-4 col-sm-4">
 								<span id="footer-partners-title">	
-									Partenaires <hr>
+									Partenaires
 								</span>
 								<ul class="list-unstyled">
 									<li class="space-link-footer"><a href="voiture.com" aria-label="lien parteanire voiture.com" target="_blank">voiture.com</a></li>
